# ismir2017-deepsalience

./: pyproject.toml  replicate.yaml  requirements.txt
deepsalience/: __init__.py
notebooks/: Algorithm Results.ipynb  Bach10_custom_multif0_output.ipynb  Best_model_output.ipynb  Build_Test_Data.ipynb  Compare Model Architectures Multif0.ipynb  Melodia Scores.ipynb  Melody Melodia Scores.ipynb  Melody recall peak streaming CNN vs Melodia.ipynb  Melody_Juanjo_scores.ipynb  Melody_cnn_ismir2015.ipynb  Melody_mel2cnn_outputs.ipynb  Melody_results_plots.ipynb  Melody_salamon_ismir2015.ipynb  Multif0 Results Plots.ipynb  Multif0_output_plots.ipynb  Piano_no_piano_eval.ipynb  Results Plots.ipynb  Run Feature Computation.ipynb  Run_Experiment_Scripts.ipynb  Salience Metrics.ipynb  Score Multif0 Comparison Algorithms.ipynb  Split npz files.ipynb  Stabilize_training.ipynb  Synthesize_melodies.ipynb  Tracking Progress.ipynb  create_training_data.ipynb  local_results.ipynb  mf0_complete_labels.ipynb  model_weight_plots.ipynb  train_network.ipynb
predict/: predict_on_audio.py
