[tool.poetry]
name = "ismir2017-deepsalience"
version = "0.1.0"
description = "soundBrilliance fork of rabitt/ismir2017-deepsalience"
authors = []

[tool.poetry.dependencies]
python = "3.8.13"
tensorflow = "2.9.1"
pescador = "2.1.0"
librosa = "0.8.0"
mir_eval = "0.4"
joblib = "0.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
