[tool.poetry]
name = "deepsalience"
version = "0.1.0"
description = "soundBrilliance fork of rabitt/ismir2017-deepsalience"
authors = []
packages = [
    { include = "deepsalience" },
    { include = "predict/**/*.py" },
]


[tool.poetry.dependencies]
python = "3.8.13"
numpy = "1.23.5"
tensorflow = "2.9.1"
pescador = "2.1.0"
librosa = "0.9.2"
mir_eval = "0.7"
joblib = "0.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
